--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1> odin-recipes</h1>
-    <ul>
-    <li> <a href="recipes/friedRice.html">Fried Rice</a> </li>
-    <li> <a href="recipes/Tea.html">Tea</a> </li>
+    <h1> Odin-recipes</h1>
+    <ul class = "dishes">
+    <li class = "friedRice"> <a href="recipes/friedRice.html">Fried Rice</a> </li>
+    <li class = "recipes"> <a href="recipes/Tea.html">Tea</a> </li>
     </ul>
 </body>
 </html>
